--- a/style.css
+++ b/style.css
@@ -355,7 +355,9 @@ template {
   transition: transform 0.2s cubic-bezier(0.34, 1.56, 0.64, 1);
   cursor: pointer;
   user-select: none;
-  margin-bottom: 80px;
+  width: 80%;
+  max-width: 480px;
+  height: auto;
 }
 
 .skiImage:hover {
@@ -367,6 +369,7 @@ template {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
+  margin-bottom: 80px;
   height: 30px;
 }
 .skiQueue__dot {
