--- a/style.css
+++ b/style.css
@@ -350,6 +350,50 @@ template {
   display: none;
 }
 
+/* System Fonts as used by GitHub */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+header {
+  padding: 16px 0;
+  position: absolute;
+  width: 100%;
+}
+
+.container {
+  width: 1024px;
+  max-width: 100%;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  height: 40px;
+  width: auto;
+  display: flex;
+}
+
+.logo svg {
+  width: 48px;
+  height: 48px;
+}
+
 .skiImage {
   transform: scale(1);
   transition: transform 0.2s cubic-bezier(0.34, 1.56, 0.64, 1);
