--- a/style.css
+++ b/style.css
@@ -430,9 +430,20 @@ header .container {
 
 .skiPersons {
   position: absolute;
-  display: flex;
-  padding: 80px 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 80px 24px;
   bottom: 0;
+  max-width: 420px;
+  gap: 16px;
+  width: 100%;
+}
+
+@media screen and (max-width: 376px) {
+  .skiPersons {
+    gap: 8px;
+    padding: 40px 16px;
+  }
 }
 
 .skiPersons > div {
@@ -441,27 +452,48 @@ header .container {
   transition: all 0.2s cubic-bezier(0.34, 1.56, 0.64, 1);
   cursor: pointer;
   user-select: none;
-  width: 80px;
-  height: 80px;
-  border-radius: 999px;
-  margin-right: 8px;
-  margin-left: 8px;
-}
-.skiPersons > div img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
   border-radius: 999px;
+  background-position: center !important;
+  background-size: cover !important;
+  background-clip: content-box !important;
+}
+.skiPersons > div::before {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 0;
+  padding-bottom: 100%;
 }
 
 .skiPersons > div:hover {
   transform: scale(1.05);
 }
 
+.skiPersons > div.anne {
+  background-image: url("/anne.jpeg");
+}
 .skiPersons > div.active.anne {
   border-color: #8f906b;
 }
 
+.skiPersons > div.sergio {
+  background-image: url("/sergio.jpeg");
+}
 .skiPersons > div.active.sergio {
-  border-color: #5f85d6;
+  border-color: #648ada;
+}
+
+.skiPersons > div.arne {
+  background-image: url("/arne.jpeg");
+}
+.skiPersons > div.active.arne {
+  border-color: #96c0e4;
+}
+
+.skiPersons > div.nienke {
+  background-image: url("/nienke.jpeg");
+}
+.skiPersons > div.active.nienke {
+  border-color: #b7481a;
 }
